--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
   check_commit_conventions:
     name: Commit messages follow project guidelines
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'merge_group' }}
+    if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
     steps:
       - uses: actions/checkout@v2
         with:
